--- a/APP CODE/apps/mobile/app.json
+++ b/APP CODE/apps/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Mobile",
-    "slug": "@hackmol/mobile",
+    "slug": "@hackowasp/mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -32,7 +32,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.anonymous.hackmolmobile"
+      "package": "com.anonymous.hackowaspmobile"
     },
     "web": {
       "favicon": "./assets/favicon.png",
