--- a/APP CODE/apps/api/.env.example
+++ b/APP CODE/apps/api/.env.example
@@ -1,10 +1,10 @@
-EXPO_ORIGIN=
-DB_USER=
-HOST=
-DATABASE=
-PASSWORD=
-PORT=
-WS_PORT=
-CLIENT_WS_PORT=
-ADMIN_WS_PORT=
-DB_PORT=(optional)
+EXPO_ORIGIN= # To allow CORS
+DB_USER= # The database user
+HOST= # The database host
+DATABASE= # The database name
+PASSWORD= # The database password
+PORT= # The API port
+WS_PORT= # The API WebSocket port
+CLIENT_WS_PORT= # The client WebSocket port
+ADMIN_WS_PORT= # The admin WebSocket port
+DB_PORT=(optional) # The database port
